src/antlr/templateParser.java
// Generated from C:/Users/Admin/Desktop/compiler project/flask_compiler/grammars/templateParser.g4 by ANTLR 4.13.2
 package antlr; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class templateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		J_EXPR_START=1, J_STMNT_START=2, J_COMMENT=3, DOCTYPE=4, HTML_COMMENT=5, 
		CLOSE_TAG_START=6, START_TAG_OPEN=7, WS=8, NORMAL_TEXT=9, IF=10, ELIF=11, 
		FOR=12, EXTENDS=13, BLOCK=14, SET=15, ELSE=16, ENDIF=17, ENDFOR=18, ENDBLOCK=19, 
		J_STMNT_END=20, J_STMNT_WS=21, MUL=22, PLUS=23, MINUS=24, DIV=25, FLOORDIV=26, 
		MOD=27, POW=28, AND=29, OR=30, NOT=31, IS=32, EQ=33, NEQ=34, GT=35, GE=36, 
		LT=37, LE=38, IN=39, QMARK=40, ELVIS=41, ASSIGN=42, TILDE=43, PIPELINE=44, 
		COMMA=45, DOT=46, COLON=47, LPAREN=48, RPAREN=49, LSB=50, RSB=51, LBRACE=52, 
		RBRACE=53, FLOAT=54, INT=55, STRING=56, ID=57, J_EXPR_END=58, J_EXPR_STMNT_END=59, 
		EXPRESSION_MODE_WS=60, STYLE_TAG_START_NAME=61, START_TAG_NAME=62, START_TAG_WS=63, 
		END_TAG_NAME=64, END_TAG_CLOSE=65, END_TAG_MODE_WS=66, STYLE_TAG_START_CLOSE=67, 
		STYLE_START_TAG_MODE_WS=68, STYLE_END_TAG_NAME=69, STYLE_END_TAG_CLOSE=70, 
		STYLE_END_TAG_MODE_WS=71, STYLE_ATTR=72, ATTR_NAME=73, ATTR_EQ=74, INSIDE_START_TAG_J_EXPR_OPEN=75, 
		START_TAG_CLOSE=76, SELF_CLOSING_TAG_CLOSE=77, INSIDE_START_TAG_MODE_WS=78, 
		ATTR_DQUOTE_START=79, ATTR_VALUE_UNQUOTED=80, ATTR_VAL_WS=81, ATTR_VAL_J_EXPR_START=82, 
		ATTR_VAL_TEXT=83, ATTR_DQUOTE_END=84, ATTR_VAL_QOUTED_WS=85, CLOSE_STYLE_START=86, 
		CSS_SEL_ID=87, CSS_SEL_CLASS=88, CSS_SEL_ELEM=89, CSS_SEL_STATE=90, CSS_SEL_COMMA=91, 
		CSS_LBRACE=92, STYLE_EXIT_RAB=93, CSS_WS=94, CSS_INLINE_EQ=95, CSS_INLINE_DQUOT_START=96, 
		CSS_INLINE_WS=97, BLK_PROP_NAME=98, BLK_COLON=99, BLK_RBRACE=100, BLK_WS=101, 
		CSS_INLINE_PROP_NAME=102, CSS_INLINE_PROP_COLON=103, CSS_INLINE_PROP_DQUOT_END=104, 
		CSS_INLINE_PROP_WS=105, CSS_PROP_VAL=106, CSS_PROP_SEMICOLON=107, CSS_PROP_VALUES_WS=108;
	public static final int
		RULE_template = 0, RULE_jinjaElement = 1, RULE_templateText = 2, RULE_setStatement = 3, 
		RULE_ifBlock = 4, RULE_ifStatmentStart = 5, RULE_ifBody = 6, RULE_ifBodyElem = 7, 
		RULE_ifStatmentEnd = 8, RULE_elifBlock = 9, RULE_elseBlock = 10, RULE_subBlock = 11, 
		RULE_forBlock = 12, RULE_forStartStatement = 13, RULE_forEndStatement = 14, 
		RULE_forBody = 15, RULE_extendsBlock = 16, RULE_inheritBlock = 17, RULE_inheritBlockBody = 18, 
		RULE_inheritBlockStart = 19, RULE_inheritBlockEnd = 20, RULE_jinjaExpression = 21, 
		RULE_jinjaExprStart = 22, RULE_jinjaExprEnd = 23, RULE_expression = 24, 
		RULE_ternaryExt = 25, RULE_defaultExpr = 26, RULE_orExpr = 27, RULE_andExpr = 28, 
		RULE_notExpr = 29, RULE_compareExpr = 30, RULE_comparisonOperator = 31, 
		RULE_pipeExpr = 32, RULE_filter = 33, RULE_argumentList = 34, RULE_argument = 35, 
		RULE_concatExpr = 36, RULE_addExpr = 37, RULE_addExprOptor = 38, RULE_mulExpr = 39, 
		RULE_mulExprOptor = 40, RULE_unaryExpr = 41, RULE_powExpr = 42, RULE_atom = 43, 
		RULE_pair = 44, RULE_primary = 45, RULE_trailer = 46, RULE_htmlElement = 47, 
		RULE_htmlRegularElement = 48, RULE_htmlStartTag = 49, RULE_htmlElementBody = 50, 
		RULE_htmlEndTag = 51, RULE_htmlSelfClosingElement = 52, RULE_htmlSelfClosingTag = 53, 
		RULE_htmlTagAttr = 54, RULE_booleanAttr = 55, RULE_attrWithUnquotedVal = 56, 
		RULE_attrWithQuotedVal = 57, RULE_quotedValElem = 58, RULE_jinjaAttrVal = 59, 
		RULE_styleAttr = 60, RULE_inlineStyleProp = 61, RULE_htmlStyleElem = 62, 
		RULE_htmlStyleElemOpenTag = 63, RULE_htmlStyleElemCloseTag = 64, RULE_cssBlock = 65, 
		RULE_selectorList = 66, RULE_selector = 67, RULE_simpleSelector = 68, 
		RULE_pseudoClassSelector = 69, RULE_cssProp = 70;
	private static String[] makeRuleNames() {
		return new String[] {
			"template", "jinjaElement", "templateText", "setStatement", "ifBlock", 
			"ifStatmentStart", "ifBody", "ifBodyElem", "ifStatmentEnd", "elifBlock", 
			"elseBlock", "subBlock", "forBlock", "forStartStatement", "forEndStatement", 
			"forBody", "extendsBlock", "inheritBlock", "inheritBlockBody", "inheritBlockStart", 
			"inheritBlockEnd", "jinjaExpression", "jinjaExprStart", "jinjaExprEnd", 
			"expression", "ternaryExt", "defaultExpr", "orExpr", "andExpr", "notExpr", 
			"compareExpr", "comparisonOperator", "pipeExpr", "filter", "argumentList", 
			"argument", "concatExpr", "addExpr", "addExprOptor", "mulExpr", "mulExprOptor", 
			"unaryExpr", "powExpr", "atom", "pair", "primary", "trailer", "htmlElement", 
			"htmlRegularElement", "htmlStartTag", "htmlElementBody", "htmlEndTag", 
			"htmlSelfClosingElement", "htmlSelfClosingTag", "htmlTagAttr", "booleanAttr", 
			"attrWithUnquotedVal", "attrWithQuotedVal", "quotedValElem", "jinjaAttrVal", 
			"styleAttr", "inlineStyleProp", "htmlStyleElem", "htmlStyleElemOpenTag", 
			"htmlStyleElemCloseTag", "cssBlock", "selectorList", "selector", "simpleSelector", 
			"pseudoClassSelector", "cssProp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'{%'", null, "'<!DOCTYPE html>'", null, null, null, null, 
			null, "'if'", "'elif'", "'for'", "'extends'", "'block'", "'set'", "'else'", 
			"'endif'", "'endfor'", "'endblock'", null, null, "'*'", "'+'", "'-'", 
			"'/'", "'//'", "'%'", "'**'", "'and'", "'or'", "'not'", "'is'", "'=='", 
			"'!='", null, "'>='", null, "'<='", "'in'", "'?'", "'??'", "'='", "'~'", 
			"'|'", "','", "'.'", "':'", "'('", "')'", "'['", "']'", null, null, null, 
			null, null, null, "'}}'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'/>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "J_EXPR_START", "J_STMNT_START", "J_COMMENT", "DOCTYPE", "HTML_COMMENT", 
			"CLOSE_TAG_START", "START_TAG_OPEN", "WS", "NORMAL_TEXT", "IF", "ELIF", 
			"FOR", "EXTENDS", "BLOCK", "SET", "ELSE", "ENDIF", "ENDFOR", "ENDBLOCK", 
			"J_STMNT_END", "J_STMNT_WS", "MUL", "PLUS", "MINUS", "DIV", "FLOORDIV", 
			"MOD", "POW", "AND", "OR", "NOT", "IS", "EQ", "NEQ", "GT", "GE", "LT", 
			"LE", "IN", "QMARK", "ELVIS", "ASSIGN", "TILDE", "PIPELINE", "COMMA", 
			"DOT", "COLON", "LPAREN", "RPAREN", "LSB", "RSB", "LBRACE", "RBRACE", 
			"FLOAT", "INT", "STRING", "ID", "J_EXPR_END", "J_EXPR_STMNT_END", "EXPRESSION_MODE_WS", 
			"STYLE_TAG_START_NAME", "START_TAG_NAME", "START_TAG_WS", "END_TAG_NAME", 
			"END_TAG_CLOSE", "END_TAG_MODE_WS", "STYLE_TAG_START_CLOSE", "STYLE_START_TAG_MODE_WS", 
			"STYLE_END_TAG_NAME", "STYLE_END_TAG_CLOSE", "STYLE_END_TAG_MODE_WS", 
			"STYLE_ATTR", "ATTR_NAME", "ATTR_EQ", "INSIDE_START_TAG_J_EXPR_OPEN", 
			"START_TAG_CLOSE", "SELF_CLOSING_TAG_CLOSE", "INSIDE_START_TAG_MODE_WS", 
			"ATTR_DQUOTE_START", "ATTR_VALUE_UNQUOTED", "ATTR_VAL_WS", "ATTR_VAL_J_EXPR_START", 
			"ATTR_VAL_TEXT", "ATTR_DQUOTE_END", "ATTR_VAL_QOUTED_WS", "CLOSE_STYLE_START", 
			"CSS_SEL_ID", "CSS_SEL_CLASS", "CSS_SEL_ELEM", "CSS_SEL_STATE", "CSS_SEL_COMMA", 
			"CSS_LBRACE", "STYLE_EXIT_RAB", "CSS_WS", "CSS_INLINE_EQ", "CSS_INLINE_DQUOT_START", 
			"CSS_INLINE_WS", "BLK_PROP_NAME", "BLK_COLON", "BLK_RBRACE", "BLK_WS", 
			"CSS_INLINE_PROP_NAME", "CSS_INLINE_PROP_COLON", "CSS_INLINE_PROP_DQUOT_END", 
			"CSS_INLINE_PROP_WS", "CSS_PROP_VAL", "CSS_PROP_SEMICOLON", "CSS_PROP_VALUES_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "templateParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public templateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(templateParser.EOF, 0); }
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public ExtendsBlockContext extendsBlock() {
			return getRuleContext(ExtendsBlockContext.class,0);
		}
		public List<JinjaElementContext> jinjaElement() {
			return getRuleContexts(JinjaElementContext.class);
		}
		public JinjaElementContext jinjaElement(int i) {
			return getRuleContext(JinjaElementContext.class,i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_template; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).enterTemplate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).exitTemplate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof templateParserVisitor ) return ((templateParserVisitor<? extends T>)visitor).visitTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateContext template() throws RecognitionException {
		TemplateContext _localctx = new TemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(142);
				extendsBlock();
				}
				break;
			}
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case START_TAG_OPEN:
				{
				setState(145);
				htmlElement();
				}
				break;
			case EOF:
			case J_EXPR_START:
			case J_STMNT_START:
			case INSIDE_START_TAG_J_EXPR_OPEN:
				{
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==J_EXPR_START || _la==J_STMNT_START || _la==INSIDE_START_TAG_J_EXPR_OPEN) {
					{
					{
					setState(146);
					jinjaElement();
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(154);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class JinjaElementContext extends ParserRuleContext {
		public InheritBlockContext inheritBlock() {
			return getRuleContext(InheritBlockContext.class,0);
		}
		public IfBlockContext ifBlock() {
			return getRuleContext(IfBlockContext.class,0);
		}
		public ForBlockContext forBlock() {
			return getRuleContext(ForBlockContext.class,0);
		}
		public JinjaExpressionContext jinjaExpression() {
			return getRuleContext(JinjaExpressionContext.class,0);
		}
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public JinjaElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jinjaElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).enterJinjaElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).exitJinjaElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof templateParserVisitor ) return ((templateParserVisitor<? extends T>)visitor).visitJinjaElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JinjaElementContext jinjaElement() throws RecognitionException {
		JinjaElementContext _localctx = new JinjaElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_jinjaElement);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				inheritBlock();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				ifBlock();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(158);
				forBlock();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(159);
				jinjaExpression();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(160);
				setStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateTextContext extends ParserRuleContext {
		public TerminalNode NORMAL_TEXT() { return getToken(templateParser.NORMAL_TEXT, 0); }
		public TemplateTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).enterTemplateText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).exitTemplateText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof templateParserVisitor ) return ((templateParserVisitor<? extends T>)visitor).visitTemplateText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateTextContext templateText() throws RecognitionException {
		TemplateTextContext _localctx = new TemplateTextContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_templateText);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(NORMAL_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetStatementContext extends ParserRuleContext {
		public TerminalNode J_STMNT_START() { return getToken(templateParser.J_STMNT_START, 0); }
		public TerminalNode SET() { return getToken(templateParser.SET, 0); }
		public TerminalNode ID() { return getToken(templateParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(templateParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode J_EXPR_STMNT_END() { return getToken(templateParser.J_EXPR_STMNT_END, 0); }
		public SetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).enterSetStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).exitSetStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof templateParserVisitor ) return ((templateParserVisitor<? extends T>)visitor).visitSetStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetStatementContext setStatement() throws RecognitionException {
		SetStatementContext _localctx = new SetStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_setStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(J_STMNT_START);
			setState(166);
			match(SET);
			setState(167);
			match(ID);
			setState(168);
			match(ASSIGN);
			setState(169);
			expression();
			setState(170);
			match(J_EXPR_STMNT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfBlockContext extends ParserRuleContext {
		public IfStatmentStartContext ifStatmentStart() {
			return getRuleContext(IfStatmentStartContext.class,0);
		}
		public IfStatmentEndContext ifStatmentEnd() {
			return getRuleContext(IfStatmentEndContext.class,0);
		}
		public IfBodyContext ifBody() {
			return getRuleContext(IfBodyContext.class,0);
		}
		public IfBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).enterIfBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).exitIfBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof templateParserVisitor ) return ((templateParserVisitor<? extends T>)visitor).visitIfBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfBlockContext ifBlock() throws RecognitionException {
		IfBlockContext _localctx = new IfBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			ifStatmentStart();
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(173);
				ifBody();
				}
				break;
			}
			setState(176);
			ifStatmentEnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStatmentStartContext extends ParserRuleContext {
		public TerminalNode J_STMNT_START() { return getToken(templateParser.J_STMNT_START, 0); }
		public TerminalNode IF() { return getToken(templateParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode J_EXPR_STMNT_END() { return getToken(templateParser.J_EXPR_STMNT_END, 0); }
		public IfStatmentStartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatmentStart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).enterIfStatmentStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).exitIfStatmentStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof templateParserVisitor ) return ((templateParserVisitor<? extends T>)visitor).visitIfStatmentStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatmentStartContext ifStatmentStart() throws RecognitionException {
		IfStatmentStartContext _localctx = new IfStatmentStartContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStatmentStart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(J_STMNT_START);
			setState(179);
			match(IF);
			setState(180);
			expression();
			setState(181);
			match(J_EXPR_STMNT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfBodyContext extends ParserRuleContext {
		public List<IfBodyElemContext> ifBodyElem() {
			return getRuleContexts(IfBodyElemContext.class);
		}
		public IfBodyElemContext ifBodyElem(int i) {
			return getRuleContext(IfBodyElemContext.class,i);
		}
		public ElseBlockContext elseBlock() {
			return getRuleContext(ElseBlockContext.class,0);
		}
		public IfBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).enterIfBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof templateParserListener ) ((templateParserListener)listener).exitIfBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof templateParserVisitor ) return ((templateParserVisitor<? extends T>)visitor).visitIfBody(this);
			else return visitor.visitChildren(this);
		}
	}
